# cppmega

./: .dockerignore  .gitignore  README.md  conftest.py  plan.md  pyproject.toml
cppmega/: __init__.py
cppmega.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docker/: Dockerfile
docs/: README.md  blackwell_feature_sweep_2026_04_12.md  changelog.md  cutile_cute_dsl_interop.md  data_preparation.md  deepgemm_gb10_check_2026_04_25.md  dense_blockscaled_weight_cache_probe_2026_04_25.md  deprecated_path_gates_2026_04_25.md  dsa_ep2_tilelang_sweep_2026_04_12.md  findings_2026_04_14_session.md  fp8_optimization_session_2026_04_13.md  fp8_path_status.md  fp8_research_session_2026_04_14.md  gb10_bwd_bwd_optimization_conclusion.md  gb10_dense_mxfp8_status_2026_04_25.md  gb10_local_memory_perf_2026_04_25.md  gb10_nan_bisect_log.md  gb10_regression_investigation_2026_04_15.md  gb10_sm121_hardware.md  gb10_software_stack.md  grad_nan_bisect_2026_04_15.md  grad_nan_investigation_2026_04_15.md  grounding_notes.md  hf_kernel_replacements_2026_04_25.md  lion8bit_ab_2026_04_25.md  long_context_roadmap.md  mamba3_mimo_p1_notes.md  mamba3_mimo_p2_psiv_cache_design.md  mamba3_mimo_p3_register_split_design.md  mamba_fork_canonical_2026_04_14.md  megatron_restoration_recipe.md  memory_dtype_audit_2026_04_25.md  migration_matrix.md  modal_b200_cutile_parity.md  modal_b200_cutile_status.md  modal_b200_cutile_variant_sweep_2026_04_11.md  nam56r_grid_search_2026_04_12.md  nam56r_mimo7_baseline_2026_04_11.md  nam56r_mimo7_nsys_profile_2026_04_11.md  nam56r_mimo7_reproducibility_2026_04_11.md  (+19 more)
(+400 files in other folders)
